--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@testing-library/user-event": "^13.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-native-input-spinner": "^1.8.1",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
@@ -42,6 +43,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
         "gh-pages": "^5.0.0"
     }
 }
