--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-dom": "^18.2.0",
         "react-native-input-spinner": "^1.8.1",
         "react-scripts": "5.0.1",
+        "socket.io-client": "^4.8.1",
         "web-vitals": "^2.1.4",
         "worker-loader": "^3.0.8"
     },
